Changelog
=========

2.0.2 - unreleased
------------------


2.0.1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]

2.0 - 2010-07-01
----------------

- Adding "deactivated" class to menus by default, so they won't flicker on load.
  This fixes http://dev.plone.org/plone/ticket/10470.
  [limi]

2.0b3 - 2010-06-13
------------------

- Added optional compatibility with zope.browsermenu.
  [hannosch]

2.0b2 - 2010-02-17
------------------

- Show "add new" menu when there are one or more addable types. Showing a link
  when only one type was addable caused conflicts with the dropdown JavaScript.
  Closes http://dev.plone.org/plone/ticket/10193.
  [esteele, davisagli]

- Query the types tool instead of the action tools to find add actions
  in FactoriesSubMenuItem. This fixes a discrepancy in action URLs.
  http://dev.plone.org/plone/ticket/10207
  [wichert]

2.0b1 - 2010-01-24
------------------

- Removed the checking for hideChildren when a single item is present, this
  makes the styling consistent again. The menu is really a one-item menu, and we
  put it in the header as a shortcut that you can click directly. This fixes
  http://dev.plone.org/plone/ticket/9735
  [limi]

2.0a2 - 2009-12-27
------------------

- Adjust factory menu to use the new getIconExprObject method.
  [hannosch]

- Removed no longer required zope.site dependency.
  [hannosch]

- Hide the actions, display and workflow menus on the folder contents page.
  This closes http://dev.plone.org/plone/ticket/8908.
  [hannosch]

- Avoid a bogus getToolByName indirection via getSite().
  [hannosch]

- Noted missing zope.publisher dependency and prefer absolute imports.
  [hannosch]

- Mark selected display always with 'actionMenuSelected' class and
  stop using bullet points. References
  http://dev.plone.org/plone/ticket/9894
  [dukebody]

2.0a1 - 2009-11-14
------------------

- Specified package dependencies and assorted cleanups.
  [hannosch]
